# experiment-worker-python

./: .dockerignore  .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
worker/: __main__.py  app.py
worker/market_info/: agent.py  model.py
worker/notification/: agent.py  config.py  exception.py  service.py
