[tool.poetry]
name = "experiment-worker-python"
version = "0.1.0"
description = ""
authors = ["Maxim Wu <maxwu@maxswu.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
httpx = "^0.27.2"
faust-streaming = {version="^0.11.3", extras=["rocksdb"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
polyfactory = "^2.16.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
addopts = "--capture=no --cov-branch --cov=app"
testpaths = [
    "tests",
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
